# elevation_mapping

./: .gitignore  LICENSE  README.md
elevation_change_detection/: CMakeLists.txt  package.xml
elevation_change_detection/config/: custom_rosconsole.conf  default.yaml  starleth.yaml
elevation_change_detection/config/visualization/: elevation_change.yaml  ground_truth.yaml
elevation_change_detection/include/elevation_change_detection/: ElevationChangeDetection.hpp
elevation_change_detection/launch/: elevation_change_detection.launch  starleth.launch  visualization.launch
elevation_change_detection/src/: ElevationChangeDetection.cpp  elevation_change_detection_node.cpp
elevation_change_msgs/: CMakeLists.txt  package.xml
elevation_change_msgs/msg/: Obstacle.msg  ObstacleResult.msg
elevation_change_msgs/srv/: DetectObstacle.srv  IgnoreObstacle.srv  Toggle.srv
elevation_layer/: CMakeLists.txt  README.md  costmap_plugins.xml  package.xml
elevation_layer/cfg/: ElevationPlugin.cfg
elevation_layer/config/: elevation_filters.yaml
elevation_layer/include/: elevation_layer.h
elevation_layer/include/elevation_layer/: elevation_layer.h  elevation_layer.hpp
elevation_layer/launch/: elevation_filters.yaml  elevation_params.yaml
elevation_layer/src/: elevation_layer.cpp
elevation_map_commons/: CMakeLists.txt  package.xml
elevation_map_commons/include/elevation_map_commons/: ElevationMapBase.hpp  TransformationMath.hpp
elevation_map_commons/src/: ElevationMapBase.cpp  TransformationMath.cpp
elevation_map_msg/: CMakeLists.txt  package.xml
elevation_map_msg/include/: EigenConversions.hpp  ElevationMapMsgHelpers.hpp  TransformationMath.hpp
elevation_map_msg/include/elevation_map_msg/: EigenConversions.hpp  ElevationMapMsgHelpers.hpp  TransformationMath.hpp
elevation_map_msg/msg/: ElevationMap.msg
elevation_map_msg/src/: EigenConversions.cpp  ElevationMapMsgHelpers.cpp  MultiArrayToEigenConversions.cpp  TransformationMath.cpp
elevation_map_msg/srv/: ElevationSubmap.srv  GetSubmap.srv
elevation_map_msg/test/: TransformationMathTest.cpp  test_elevation_map_msg.cpp
elevation_map_visualization/: CMakeLists.txt  package.xml
elevation_map_visualization/include/: ElevationMapVisualization.hpp  ElevationMapVisualizationHelpers.hpp  ElevationVisualization.hpp  MapRegionVisualization.hpp
elevation_map_visualization/include/elevation_map_visualization/: ElevationMapVisualization.hpp  ElevationMapVisualizationHelpers.hpp  VarianceVisualization.hpp  VisualizationBase.hpp
elevation_map_visualization/launch/: elevation_map_raw_visualization.launch  elevation_map_visualization.launch
elevation_map_visualization/parameters/elevation/: default_fused.yaml  default_with_color.yaml
elevation_map_visualization/parameters/variance/: default.yaml
elevation_map_visualization/rviz/: rviz_configuration.rviz  rviz_configuration_aslam.rviz
elevation_map_visualization/src/: ElevationMapVisualization.cpp  ElevationMapVisualizationHelpers.cpp  ElevationVisualization.cpp  MapRegionVisualization.cpp  VarianceVisualization.cpp  VisualizationBase.cpp  elevation_map_visualization_node.cpp  starleth_elevation_visualization_node.cpp
elevation_mapping/: .gitignore  CMakeLists.txt  package.xml
elevation_mapping/cfg/: ElevationMapPlugin.cfg
elevation_mapping/config/: rosconsole.conf
elevation_mapping/include/: CovarianceMapUpdater.hpp  ElevationMap.hpp  ElevationMapping.hpp  PrimeSenseSensorProcessor.hpp  RobotMotionMapUpdater.hpp
elevation_mapping/launch/: atlas.launch  custom_rosconsole.conf  elevation_map_visualization.launch  elevation_mapping.launch  elevation_mapping_aslam.launch  elevation_mapping_aslam_test.launch  elevation_mapping_atlas.launch  elevation_mapping_starleth.launch  ground_truth.launch  ground_truth_long_range.launch  raw_sigma_bound_visualization.launch  raw_visualization.launch  raw_visualization_long_range.launch  sigma_bound_visualization.launch  starleth.launch  starleth_elevation_mapping.launch  starleth_long_range.launch  starleth_long_range_lee.launch  starleth_teach_and_repeat.launch  starleth_traversability_site.launch  terrain_scan.launch  visualization.launch  visualization_long_range.launch
elevation_mapping/rviz/: elevation_map_visualization.rviz
elevation_mapping/scripts/: ground_truth_pose_publisher_lee.py~
elevation_mapping/src/: AslamSensorProcessor.cpp  CovarianceMapUpdater.cpp  ElevationMap.cpp  ElevationMapping.cpp  PointXYZRGBConfidenceRatio.cpp  PrimeSenseSensorProcessor.cpp  RobotMotionMapUpdater.cpp  SensorProcessor.cpp  elevation_mapping_node.cpp  starleth_elevation_mapping_node.cpp
elevation_mapping/srv/: GetSubmap.srv
elevation_mapping/test/: ElevationMapTest.cpp  ThreadSafeParameterWrapperTest.cpp  WeightedEmpiricalCumulativeDistributionFunctionTest.cpp  elevation_mapping.test  test_elevation_mapping.cpp
elevation_mapping_costmap_2d_plugin/: CMakeLists.txt  costmap_plugins.xml  package.xml
elevation_mapping_costmap_2d_plugin/src/: elevation_layer.cpp
elevation_mapping_demos/: CMakeLists.txt  package.xml
elevation_mapping_demos/launch/: ground_truth_demo.launch  realsense_demo.launch  simple_demo.launch  simulation_demo.launch  starleth_kinect_demo.launch  turtlesim3_waffle_demo.launch  visualization.launch
elevation_mapping_demos/rviz/: elevation_map_visualization.rviz  turtlebot3_waffle_demo.rviz
elevation_mapping_demos/sample_data/: maze.ply
elevation_mapping_demos/scripts/: ground_truth_pose_publisher.py  tf_to_pose_publisher.py
elevation_mapping_gazebo/: CMakeLists.txt  package.xml
elevation_mapping_gazebo/config/: default.yaml
elevation_mapping_gazebo/launch/: elevation_mapping_gazebo.launch  load_urdf.launch
elevation_mapping_gazebo/meshes/: wedge.dae
elevation_mapping_gazebo/rviz/: elevation_mapping_gazebo.rviz
elevation_mapping_gazebo/src/: OdometryMotionGazeboRosControl.cpp
elevation_mapping_gazebo/urdf/: depth_camera_robot.urdf.xacro
elevation_mapping_gazebo/worlds/: box.world  catastrophe_area.world  empty.world  maze_obstacles.world  slope.world  stairs.world  wedge.world
(+182 files in other folders)
