<?xml version="1.0"?>
<package>
  <name>elevation_map_commons</name>
  <version>0.1.0</version>
  <description>Common functions and classes for hanlding of elevation maps.</description>
  <maintainer email="pfankhauser@ethz.ch">Peter Fankhauser</maintainer>
  <license>MIT</license>
  <url type="website">http://github.com/ethz-asl/elevation_mapping</url>
  <url type="bugtracker">http://github.com/ethz-asl/elevation_mapping/issues</url>
  <author email="pfankhauser@ethz.ch">Peter Fankhauser</author>
  <buildtool_depend>catkin</buildtool_depend>
</package>
