<?xml version="1.0"?>
<package>
  <name>elevation_map_visualization</name>
  <version>0.1.0</version>
  <description>Subscribes to an elevation map topic and publishes the corresponding marker array message that can be visualized in rviz.</description>
  <maintainer email="pfankhauser@ethz.ch">Peter Fankhauser</maintainer>
  <license>MIT</license>
  <url type="website">http://github.com/ethz-asl/elevation_mapping</url>
  <url type="bugtracker">http://github.com/ethz-asl/elevation_mapping/issues</url>
  <author email="pfankhauser@ethz.ch">Peter Fankhauser</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>elevation_map_msg</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>elevation_map_msg</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>
</package>
