<?xml version="1.0"?>
<package>
  <name>elevation_mapping</name>
  <version>0.2.0</version>
  <description>Generates an elevation map from distance measurements and robot pose information.</description>
  <maintainer email="pfankhauser@ethz.ch">Peter Fankhauser</maintainer>
  <license>MIT</license>
  <url type="website">http://github.com/ethz-asl/elevation_mapping</url>
  <url type="bugtracker">http://github.com/ethz-asl/elevation_mapping/issues</url>
  <author email="pfankhauser@ethz.ch">Peter Fankhauser</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>grid_map</build_depend>
  <build_depend>grid_map_lib</build_depend>
  <build_depend>grid_map_msg</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>sm_common</build_depend>
  <build_depend>sm_timing</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>grid_map_lib</run_depend>
  <run_depend>grid_map_msg</run_depend>
  <run_depend>grid_map</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
</package>
