<?xml version="1.0"?>
<package format="2">
  <name>elevation_mapping_costmap_2d_plugin</name>
  <version>0.0.2</version>
  <description>adds elevation mapping informations to costmap_2d</description>
  <author email="echisari@anybotics.com">Eugenio Chisari</author>
  <maintainer email="echisari@anybotics.com">Eugenio Chisari</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>boost</depend>
  <depend>tf</depend>
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>grid_map_ros</depend>
  <depend>filters</depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml" />
  </export>
</package>
